--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node mesquita-games.ts"
+    "start": "ts-node api/mesquita-games.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@vercel/node": "^3.2.7"
+    "@vercel/node": "^3.2.7",
+    "crypto": "^1.0.1"
   }
 }
